--- a/css/estilos.css
+++ b/css/estilos.css
@@ -267,8 +267,7 @@ body{
 }
  /*ESTILO CONTACTO*/
 #contacto {
-    display: flex;
-    flex-flow: row wrap;
+    flex-wrap: wrap;
     background-color: rgba(211, 215, 216, 0.5);
     margin: 10px 40px;
 }
@@ -353,8 +352,7 @@ body{
     margin:10px 40px;
 }
 #somosFlex{
-    display: flex;
-    flex-flow: row wrap;
+    flex-wrap: wrap;
     width: 100%;
     height: 50%;
     margin-bottom: 10px;
@@ -387,8 +385,6 @@ footer {
     padding: 10px;
 }
 .contenedorRedes{
-    display: flex;
-    flex-direction: row;
     justify-content: flex-end;
     width: 100%;
     height: 5%;
