--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -124,15 +124,19 @@ body{
     }
 }
 @media only screen and (min-width: 760px ) and (max-width: 990px){
-    .row-fluid .span4 {
+    .row-fluid{ 
+        .span4 {
         width: 40%;
         margin-left: 7%;
-    }
+        }
+    }    
 }
 @media only screen and (min-width: 990px ){
-    .row-fluid .span4 {
+    .row-fluid{ 
+        .span4 {
         width: 30%;
         margin-left: 2.564102564102564%;
+        }
     }
 }  
 .m-bottom {
@@ -172,7 +176,6 @@ body{
     width: 100%;
     height: 100%;
 }
-
 .blur {
     filter: blur(2px);
 }
@@ -325,7 +328,7 @@ h3{
     color: #a3d4fa;
     font-size: 12px;
 }
- .breadcrumb{
+.breadcrumb{
     background-color: white;
     padding-left: 40px;
         a{
