--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -216,7 +216,7 @@ body{
 #contenedorProductos{
     display: grid;
     grid-template-columns: 40% 40%;
-    grid-template-rows: 30% 10px 10px 30% 10px 10px 30% 10px 10px;
+    grid-template-rows: 2fr 10px 10px 2fr 10px 10px 2fr 10px 10px;
     justify-content: center;
     justify-items: center;
     align-items: center;
