ajustes en categorias destacadas

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -33,6 +33,9 @@ body{
 .fontSizePrecios {
     font-size: 15px;
 }
+.fontSizeProd{
+    font-size: 18px;
+}
 .categorias {
     @include misSubtitulos (categorias);
 }
@@ -78,15 +81,6 @@ body{
     }
 }
 /*BANNER*/
-.bannerPrincipal{
-    background-image: url('../img/portada.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    min-height: 400px;
-    height: 50vh;
-    margin-bottom: 40px;
-}
 .carousel-indicators {
     li{
         width: 10px;
@@ -172,16 +166,30 @@ body{
     height: 100%;
 }
 .blur {
-    filter: blur(2px);
+    filter: contrast(85%) blur(1px);
+    transform: scale(2);
+    transition: opacity .2s;
+}
+.blur:hover{
+    filter: blur(0);
+    transform: scale(1.5);
+    transition: all 1s ease;
 }
 .imgCategorias {
     width: $ancho;
     height: auto;
     border: 0;
 }
-.buttonComprar{
-    background-color: rgb(175, 176, 182);
-    border-color: rgb(175, 176, 182);
+.btn-line{
+    background-color: #fff;
+    color: #444;
+    padding: 8px 20px 8px 24px;
+    line-height: 18px;
+    transition: all 0.25s ease-in;
+}
+.btn-line:hover{
+    color: #fff;
+    background-color: #1e7785;
 }
 .textbanner-text {
     position: absolute;
@@ -196,7 +204,7 @@ body{
 }
 .textbanner-title {
     margin-bottom: 15px;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 700;
     line-height: 36px;
 }
@@ -391,4 +399,12 @@ footer {
     width: $ancho;
     height: 5%;
     margin-top: 50px;
+}
+.item-link{
+    color: black;
+    text-decoration: none;
+}
+.item-link:hover{
+    color: rgb(126, 126, 126);
+    text-decoration: none;
 }
