--- a/css/estilos.css
+++ b/css/estilos.css
@@ -44,6 +44,10 @@ body {
   font-size: 15px;
 }
 
+.fontSizeProd {
+  font-size: 18px;
+}
+
 .categorias {
   color: #444;
   font-size: 16px;
@@ -100,16 +104,6 @@ body {
 }
 
 /*BANNER*/
-.bannerPrincipal {
-  background-image: url("../img/portada.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  min-height: 400px;
-  height: 50vh;
-  margin-bottom: 40px;
-}
-
 .carousel-indicators li {
   width: 10px;
   height: 10px;
@@ -206,8 +200,21 @@ body {
 }
 
 .blur {
-  -webkit-filter: blur(2px);
-          filter: blur(2px);
+  -webkit-filter: contrast(85%) blur(1px);
+          filter: contrast(85%) blur(1px);
+  -webkit-transform: scale(2);
+          transform: scale(2);
+  -webkit-transition: opacity .2s;
+  transition: opacity .2s;
+}
+
+.blur:hover {
+  -webkit-filter: blur(0);
+          filter: blur(0);
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
 }
 
 .imgCategorias {
@@ -216,9 +223,18 @@ body {
   border: 0;
 }
 
-.buttonComprar {
-  background-color: #afb0b6;
-  border-color: #afb0b6;
+.btn-line {
+  background-color: #fff;
+  color: #444;
+  padding: 8px 20px 8px 24px;
+  line-height: 18px;
+  -webkit-transition: all 0.25s ease-in;
+  transition: all 0.25s ease-in;
+}
+
+.btn-line:hover {
+  color: #fff;
+  background-color: #1e7785;
 }
 
 .textbanner-text {
@@ -237,7 +253,7 @@ body {
 
 .textbanner-title {
   margin-bottom: 15px;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 700;
   line-height: 36px;
 }
@@ -489,26 +505,20 @@ footer {
 
 .instagram {
   color: black;
-  width: 4%;
   height: 60%;
   cursor: pointer;
-  margin-right: 20px;
 }
 
 .facebook {
   color: #1771E6;
-  width: 4%;
   height: 60%;
   cursor: pointer;
-  margin-right: 20px;
 }
 
 .whatsapp {
   color: #4ECB5C;
-  width: 4%;
   height: 60%;
   cursor: pointer;
-  margin-right: 20px;
 }
 
 .svg {
@@ -529,5 +539,15 @@ footer {
   width: 100%;
   height: 5%;
   margin-top: 50px;
+}
+
+.item-link {
+  color: black;
+  text-decoration: none;
+}
+
+.item-link:hover {
+  color: #7e7e7e;
+  text-decoration: none;
 }
 /*# sourceMappingURL=estilos.css.map */
