--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,5 @@
 $color-primario: black;
 $color-logo: #d09845;
-$color-subtitulos: #1e7785;
-$color-gris: #F3F2EC;
+$color-secundario: #1e7785;
+$color-terciario: #F3F2EC;
 $ancho: 100%;
