--- a/css/estilos.css
+++ b/css/estilos.css
@@ -282,15 +282,16 @@ html {
 
 /*ESTILO CONTACTO*/
 #contacto {
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
   background-color: rgba(211, 215, 216, 0.5);
   margin: 10px 40px;
 }
 
 #contacto img {
   height: 100%;
-  width: 300px;
 }
 
 .contactoTitulo {
