--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,51 +1,25 @@
-/*ESTILOS GENÉRICOS*/
-body{
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+*{
+    margin: 0;
+    padding: 0;
 }
-html{
-    scroll-behavior: smooth;
-}
-.marginForm{
-    margin: 10px;
-}
-.marginInput{
-    margin-bottom: 20px;
-}
-.fontsize-manos{
-    font-size: 30px !important;
-    margin-top: 80px;
-    margin-right: 10px;
-    margin-left: 10px;
-}
-.fontsize-piezas{
-    font-size: 20px;
-    margin-bottom: 100px;
-    margin-right: 10px;
-    margin-left: 10px;
-}
-.fontwBold{
-    font-weight: 700;
-}
-.fontSizePrecios {
-    font-size: 15px;
-}
-.fontWCateg {
-    font-weight: 300;
-}
-.fontSizePrecios {
-    font-size: 15px;
-}
-.fontSizeProd{
-    font-size: 18px;
+body {
+    font-family: 'Poppins', sans-serif !important;
+    font-weight: 400 !important;
+    background-color: white;
+    color: black;
+    transition: background-color 700ms ease;
+  }
+html {
+  scroll-behavior: smooth;
 }
 .categorias {
     @include misSubtitulos (categorias);
 }
 /*MENÚ*/
 .logo {
-    font-size: 150%;
-    color:#d09845;
+    font-size: 150% !important;
+    color: #d09845;
     font-weight: 700;
     letter-spacing: 1px;
     margin-right: 20px;
@@ -54,14 +28,33 @@ html{
 }
 .navbar-light{
     .navbar-brand{
-        color: #d09845;
-    }
+      color: #d09845 !important;
+    }  
 }
-.container-fluid{
+.container-fluid {
     align-content: center;
 }
-.navbar{
-    padding-top: 35px;
+.navbar {
+    padding-top: 15px !important;
+    padding-left: 20px !important;
+}
+.blackMode{
+    background-color: rgb(245, 242, 197);
+    color: black;
+}
+.botonDM{
+   margin-top: 20px;
+   margin-left: 200px;
+   border-radius: 50% !important;
+}
+.botonLM{
+    margin-top: 20px;
+    margin-left: 200px;
+    border-radius: 50% !important;
+}
+#botonCarrito{
+    margin-top: 20px;
+    margin-left: 20px;
 }
 /*BANNER*/
 .carousel-indicators {
@@ -71,40 +64,56 @@ html{
         border-radius: 100%;
         margin-right: 10px;
         margin-left: 10px;
-    }
+    }    
+}
+.fontsize-manos {
+    font-size: 30px !important;
+    margin-top: 80px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+.fontsize-piezas {
+    font-size: 20px;
+    margin-bottom: 100px;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 /*ESTILO DE SECCIÓN ENVIOS-CUOTAS-10%OFF*/
 .flex-containerRow {
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-bottom: 30px;
-    background-color: $color-terciario;
-     .item {
-        padding: 10px;  
+    background-color: #F3F2EC;
+      .item {
+        padding: 10px;
         margin: 5px;
         text-align: center;
-    }    
-    .borderRight {
-            border-right: 0.5px solid #444;
-    }
+      }
+      .borderRight {
+         border-right: 0.5px solid #444;
+      }
 }
 /*CATEGORIAS DESTACADAS DEL INDEX*/
-.row-fluid{
+.row-fluid {
     .span4{
         display: block;
         float: left;
-        width: $ancho;
+        width: 100%;
         min-height: 300px;
-    }
+    }    
 }
 .m-bottom {
-    margin-bottom: 20px!important;
+    margin-bottom: 20px !important;
 }
 .m-top {
-    margin-top: 20px!important;
+    margin-top: 20px !important;
 }
 .p-relative {
-    position: relative!important;
+    position: relative !important;
 }
 .span4 {
     width: 370px;
@@ -120,52 +129,61 @@ html{
     .textbanner-image {
         position: absolute;
         top: 0;
-        width: $ancho;
+        width: 100%;
         height: 100%;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-    }
+    }    
 }
 .textbanner-link {
     display: block;
-    width: $ancho;
+    width: 100%;
     height: 100%;
 }
 .blur {
-    filter: brightness(80%) blur(1px);
-    transform: scale(2);
+    -webkit-filter: brightness(80%) blur(1px);
+            filter: brightness(80%) blur(1px);
+    -webkit-transform: scale(2);
+            transform: scale(2);
+    -webkit-transition: opacity .2s;
     transition: opacity .2s;
 }
-.blur:hover{
-    filter: blur(0);
-    transform: scale(1.5);
+.blur:hover {
+    -webkit-filter: blur(0);
+            filter: blur(0);
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+    -webkit-transition: all 1s ease;
     transition: all 1s ease;
 }
 .imgCategorias {
-    width: $ancho;
+    width: 100%;
 }
-.btn-line{
+.btn-line {
     background-color: #fff;
     color: #444;
     padding: 8px 20px 8px 24px;
     line-height: 18px;
+    -webkit-transition: all 0.25s ease-in;
     transition: all 0.25s ease-in;
 }
-.btn-line:hover{
+.btn-line:hover {
     color: #fff;
-    background-color: $color-secundario;
+    background-color: #1e7785;
 }
 .textbanner-text {
     position: absolute;
     top: 50%;
     left: 50%;
     z-index: 9;
-    width:$ancho;
+    width: 100%;
     padding: 30px 20px;
     color: white;
-    transform: translate(-50%, -50%);
-    box-sizing: border-box;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 .textbanner-title {
     margin-bottom: 15px;
@@ -180,225 +198,241 @@ html{
     text-overflow: ellipsis;
 }
 /*PRODUCTOS DESTACADOS DEL INDEX*/
-.m-top-prod{
+  .m-top-prod {
     margin-top: 70%;
 }
-.item-link{
+.item-link {
     color: black;
     text-decoration: none;
 }
-.item-link:hover{
-    color: rgb(126, 126, 126);
+.item-link:hover {
+    color: #7e7e7e;
     text-decoration: none;
 }
-#contenedorProductos{
+#contenedorProductos {
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: 40% 40%;
-    grid-template-rows: 2fr 10px 10px 2fr 10px 10px 2fr 10px 10px;
-    justify-content: center;
+    -ms-grid-columns: 40% 40%;
+        grid-template-columns: 40% 40%;
+    -ms-grid-rows: 2fr 10px 10px 2fr 10px 10px 2fr 10px 10px;
+        grid-template-rows: 2fr 10px 10px 2fr 10px 10px 2fr 10px 10px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     justify-items: center;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     grid-row-gap: 20px;
     grid-column-gap: 10px;
-    width: $ancho;
+    width: 100%;
     height: 40%;
     margin-bottom: 60px;
         img {
-            width: $ancho ;
-            height: 80% ;
+            width: 100%;
+            height: 80%;
             margin-top: 20px;
             margin-bottom: 5px;
             cursor: pointer;
-        }
+        }    
 }
 .subtitulos {
-    @include misSubtitulos (comocomprar);
+    color: #1e7785;
+    font-size: 20px;
+    font-weight: 700;
 }
+  
 /*ESTILO CONTACTO*/
 #contacto {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: row wrap;
     flex-flow: row wrap;
-    background-color: rgba(211, 215, 216, 0.5);
     margin: 10px 40px;
         img {
             height: 100%;
-        }
+        }    
 }
-.contactoTitulo{
-    @include misSubtitulos (comocomprar);
+#formCliente {
+    width: 500px;
+}
+.contactoTitulo {
+    color: #1e7785;
+    font-size: 20px;
+    font-weight: 700;
     margin-bottom: 10px;
     margin: 10px 40px;
 }
+.marginForm {
+    margin: 10px;
+}
+.marginInput {
+    margin-bottom: 20px;
+}
+.form-control{
+    width: 700px;
+}
+.btn-success {
+    color: white;
+    background-color: #1e7785 !important;
+    border-color: #1e7785 !important;
+}
+.btn-success:hover{
+    color: #fff;
+    background-color: #3092a1 !important;
+    border-color: #3092a1 !important;
+}
 /*ESTILO DE PRODUCTOS*/
 .titulos {
-    color: $color-secundario;
+    color: #1e7785;
     font-weight: 700;
     font-size: 20px;
     margin-bottom: 10px;
     margin-left: 40px;
 }
-.navMargin{
-    margin-left: 10px;
-}
-.liNav{
-    --clippy: polygon(0 0, 0 0, 0 100%, 0% 100%);
-    color: black;
-    font-size: 13px;
-    padding-left: 40px !important;
-    background-color: $color-terciario;
-}
-.liNav::after{
-    content: "";
-    display: block;
-    background: #444;
-    width: $ancho;
-    margin-top: 3px;
-    height: 2px;
-    clip-path: var(--clippy);
-    transition: clip-path .5s;
-}
-.liNav:hover{
-    --clippy:polygon(0 0, 100% 0, 100% 100%, 0 100%);
-    color: $color-secundario;
-}
-h3{
+.fontSizeProd {
     font-size: 18px;
 }
-#productosPadre{
-    align-content: center;
-    width: $ancho;
-    height: 100%;
-    margin-top: 18px;
-    margin-bottom: 40px;
-    text-align: center;
-    flex-wrap: wrap;
-        img {
-            height: 290px;
-            width: 90% ;
-            margin-top: 20px;
-            margin-bottom: 5px;
-            cursor: pointer;
-        }
+.fontWCateg {
+    font-weight: 300;
 }
-.caja{
+.fontwBold {
+    font-weight: 700;
+}
+.caja {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     width: 300px;
     max-height: 650px;
     margin: 10px;
+    -webkit-box-shadow: 0px 0px 5px 1px #e0dfdb;
     box-shadow: 0px 0px 5px 1px #e0dfdb;
 }
-.btn-generico{
-    color: white;
-    background-color: $color-secundario;
-    border-color: $color-secundario;
-}
-.btn-generico:hover{
-    color: #fff;
-    background-color: #3092a1;
-    border-color: #3092a1 ;
-}
-.bi-cart-check{
-    margin-top: 5px;
-    margin-left: 5px;
-}
-.colorCuotas {
-    color: #a3d4fa;
-    font-size: 12px;
-}
-.breadcrumb{
-    background-color: white;
-    padding-left: 40px;
-        a{
-            color: black;
-        }
-}
-/*COMO COMPRAR*/
-#comoComprar{
-    p{
-        margin: 10px 40px;
-    }
-} 
-#comoComprar{
-    ol{
-        margin: 10px;
-        list-style-position: inside;
-        font-size: 14px
-    }
+.btn-outline-secondary{
+    width: 20% !important;
+    margin-left: 2px !important;
+    margin-bottom: 5px !important;
 }
 /*ESTILO QUIENES SOMOS*/
 #somos {
-    margin:10px 40px;
+    margin: 10px 40px;
 }
-#somosFlex{
+#somosFlex {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row wrap;
-    width: $ancho;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    width: 100%;
     height: 50%;
     margin-bottom: 10px;
     margin-top: 40px;
-    justify-content: flex-start ;
-    align-items: center;
-        img{
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+        img {
             margin-right: 30px;
         }
-        p{
-            align-items: flex-end;
+        p {
+        -webkit-box-align: end;
+            -ms-flex-align: end;
+                align-items: flex-end;
         }
-}
+    }        
 .quienesSomos {
-    color:black;
+    color: black;
     background-color: rgba(211, 215, 216, 0.5);
     text-align: center;
     line-height: 1.5;
     padding-top: 10px;
     padding-bottom: 20px;
-        p{
+        p {
             line-height: 3;
-        }
+        }    
 }
 /*FOOTER*/
 footer {
-    @include footerbg (footer);
+    background: -webkit-gradient(linear, left top, right top, from(#f4c478), color-stop(49%, #9fac94), to(#699da6));
+    background: linear-gradient(90deg, #f4c478 0%, #9fac94 49%, #699da6 100%);
+    height: 10vh;
+    margin-top: 10px;
+    padding-top: 25px;
 }
-.instagram{
-    @include redes (instagram);
+.instagram {
+    color: rgb(46, 45, 45);
+    height: 50%;
+    cursor: pointer;
 }
-.facebook{
-    @include redes (facebook);
+.facebook {
+    color: rgb(46, 45, 45);
+    height: 50%;
+    margin-left: 15px;
+    cursor: pointer;
 }
-.whatsapp{
-    @include redes (whatsapp);
-}
-.svg{
+.btn-whatsapp {
+    position: fixed;
+    border-radius: 50px;
+    text-align: center;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.3) !important;
+    color: white !important;
+    background: #4ECB5C;
+    cursor: pointer;
+    z-index: 100;
+}  
+.svg {
     margin: 10px;
-}
-.contenedorRedes{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    width: $ancho;
-    height: 5%;
-    margin-top: 50px;
 } 
-/*MENU*/
-@media only screen and (min-width: 360px ) and (max-width: 992px){
-    .navbar{
-        padding-bottom: 35px !important;
+.contenedorRedes {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 5%;
+    margin-top: 100px;
+}
+.breadcrumb {
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 0.75rem !important;
+        li a{
+            text-decoration: none !important;
+            list-style-type: none;
+            color: black;
+        } 
+}
+  /*MENU*/
+@media only screen and (min-width: 360px) and (max-width: 992px) {
+    .navbar {
+      padding-bottom: 35px !important;
     }
 }
 @media only screen and (min-width: 992px) {
-    .container-fluid{
-        height: 115px;
+    .container-fluid {
+      height: 115px;
     }
     .nav-link {
-        padding-right: 2rem !important;
-        padding-left: 2rem !important;
+      padding-right: 2rem !important;
+      padding-left: 2rem !important;
     }
 }
-@media only screen and (min-width: 1200px){
+@media only screen and (min-width: 1200px) {
     .nav-link {
-        padding-right: 3rem !important;
-        padding-left: 3.5rem !important;
+      padding-right: 3rem !important;
+      padding-left: 3.5rem !important;
+      margin-top: 20px;
+    }
+    .navbar-brand{
+        margin-top: 20px;
     }
 }
  
